--- a/src/styles/application.css
+++ b/src/styles/application.css
@@ -17,6 +17,28 @@
 .App-intro {
   font-size: large; }
 
+.react-tabs__tab {
+  display: inline-block;
+  border: 1px solid transparent;
+  position: relative;
+  list-style: none;
+  padding: 6px 12px;
+  cursor: pointer;
+  background: #fff;
+  border-color: #aaa;
+  color: #000;
+  border-radius: 5px 5px 0 0; }
+
+.react-tabs__tab--selected {
+  border: 2px solid;
+  background: #adffb6; }
+
+.react-tabs__tab-list {
+  border-bottom: 1px solid #aaa;
+  margin: 0 0 10px;
+  padding: 0;
+  display: inline-flex; }
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg); }
@@ -26,4 +48,17 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif; }
+  font-family: sans-serif;
+  background-color: #9ddff2 !important; }
+
+.card {
+  border: 2px solid;
+  border-radius: 5px;
+  box-shadow: 5px 7px;
+  background: #F3AF9C; }
+  .card .react-tabs {
+    height: 100%; }
+  .card .header {
+    margin-top: 0px;
+    border-bottom: 1px solid;
+    padding-bottom: 5px; }
